--- a/Project Framework/PT-Project.vcxproj
+++ b/Project Framework/PT-Project.vcxproj
@@ -133,6 +133,9 @@
     <ClCompile Include="Actions\ActionAddHexagon.cpp" />
     <ClCompile Include="Actions\ActionExit.cpp" />
     <ClCompile Include="Actions\ActionSave.cpp" />
+    <ClCompile Include="Actions\ActionSendBack.cpp" />
+    <ClCompile Include="Actions\ActionSendFront.cpp" />
+    <ClCompile Include="Actions\Delete.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
@@ -184,6 +187,9 @@
     <ClInclude Include="Actions\ActionAddHexagon.h" />
     <ClInclude Include="Actions\ActionExit.h" />
     <ClInclude Include="Actions\ActionSave.h" />
+    <ClInclude Include="Actions\ActionSendBack.h" />
+    <ClInclude Include="Actions\ActionSendFront.h" />
+    <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="Actions\Select.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
