--- a/Project Framework/PT-Project.vcxproj
+++ b/Project Framework/PT-Project.vcxproj
@@ -137,6 +137,8 @@
     <ClCompile Include="Actions\ActionSendFront.cpp" />
     <ClCompile Include="Actions\Delete.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
+    <ClCompile Include="Actions\ToDrawAction.cpp" />
+    <ClCompile Include="Actions\ToPlayAction.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
     <ClCompile Include="CMUgraphicsLib\colors.cpp" />
@@ -191,6 +193,8 @@
     <ClInclude Include="Actions\ActionSendFront.h" />
     <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="Actions\Select.h" />
+    <ClInclude Include="Actions\ToDrawAction.h" />
+    <ClInclude Include="Actions\ToPlayAction.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
     <ClInclude Include="CMUgraphicsLib\colors.h" />
