--- a/Project Framework/PT-Project.vcxproj
+++ b/Project Framework/PT-Project.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="Actions\ActionSave.cpp" />
     <ClCompile Include="Actions\ActionSendBack.cpp" />
     <ClCompile Include="Actions\ActionSendFront.cpp" />
+    <ClCompile Include="Actions\changeCrntDrawColor.cpp" />
+    <ClCompile Include="Actions\changeCurrentFillColor.cpp" />
     <ClCompile Include="Actions\Delete.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
@@ -189,6 +191,8 @@
     <ClInclude Include="Actions\ActionSave.h" />
     <ClInclude Include="Actions\ActionSendBack.h" />
     <ClInclude Include="Actions\ActionSendFront.h" />
+    <ClInclude Include="Actions\changeCrntDrawColor.h" />
+    <ClInclude Include="Actions\changeCurrentFillColor.h" />
     <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="Actions\Select.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
@@ -221,6 +225,9 @@
     <ClInclude Include="GUI\UI_Info.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="DEFS.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="PT-Project.vcproj" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
