--- a/Project Framework/PT-Project.vcxproj.filters
+++ b/Project Framework/PT-Project.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClCompile Include="Actions\changeFigFillColor.cpp" />
     <ClCompile Include="Actions\changeFigDrawColor.cpp" />
     <ClCompile Include="Actions\ActionPickByFill.cpp" />
+    <ClCompile Include="Actions\PickByBoth.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\ActionAddEllipse.h" />
@@ -115,6 +116,7 @@
     <ClInclude Include="Actions\changeFigFillColor.h" />
     <ClInclude Include="Actions\changeFigDrawColor.h" />
     <ClInclude Include="Actions\ActionPickByFill.h" />
+    <ClInclude Include="Actions\PickByBoth.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PT-Project.vcproj" />
